fixed alignment on text and images in index.html and added headers to subsequent pages

--- a/style.css
+++ b/style.css
@@ -51,9 +51,31 @@ header {
 }
 
 .summary {
-  padding: 50px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+  max-width: 800px;
+  display: block;
+  margin: 0 auto;
+}
+
+.quickLinks {
+  max-width: 800px;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 footer {
   margin-bottom: 40px;
+}
+
+.socialMedia {
+  text-align: center;
+}
+
+.credits {
+  text-align: right;
 }
